fixing viewport issue on smaller devices. Also added line to Readme.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 
-html, body, #root {
-  height: 100%;
+html, body, #root, .page-container, .App {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  max-width: 100vw;   /* Prevent horizontal scroll */
+  box-sizing: border-box;
 }
 
 .page-container {
